# disateq-motor-cpe-v5

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  apply_patch.py  apply_wizard_mapeo.py  build.ps1  build_installer.ps1  deploy_mapper.ps1  deploy_mapper_v2.ps1  deploy_task004js.ps1  deploy_task005.ps1  fix_chrome_url.py  fix_explorar_rapido.py  fix_getFuenteParams.py  fix_get_historial.py  fix_historial.py  fix_historial_align.py  fix_logger.py  fix_main_wizard.py  fix_p1_p5_p6.ps1  fix_p5_p6.ps1  fix_scheduler_alias.py  fix_series_backend.py  fix_series_frontend.py  fix_timeout.py  fix_total_backend.py  fix_ui_header_footer.ps1  fix_wizard_finish.ps1  fix_wizard_msg.py  fix_wizard_nav.ps1  generar_excel_prueba.py  insert_scheduler_card.py  install_scheduler.py  installer.nsi  main.py  patch_api_task005.ps1  patch_client_loader.py  patch_endpoints_v2.py  (+17 more)
config/clientes/: farmacia_central.yaml  local_cercado_piura.yaml
config/contratos/: farmacia_central.yaml  farmacia_central_generico.yaml  farmacias_fas.yaml  local_cercado_piura.yaml
docs/: 2_ANALISIS_MOTOR_CPE_v5.md  3_PLAN_MOTOR_CPE_v5.md  ARQUITECTURA_CARPETAS.md  CONTEXTO_MAESTRO_MOTOR_CPE_v5.md  CONTEXTO_MAESTRO_MOTOR_CPE_v5_2.md  CONTEXTO_MAESTRO_MOTOR_CPE_v5_3.md  CONTEXTO_MAESTRO_MOTOR_CPE_v5_5.md  EJEMPLOS.md  ESTADO.md  GUIA_TECNICA.md  INSTALACION.md  README_LICENCIAS.md  REPORTE_PRUEBA_NIVEL1.md  REQUISITOS_PRUEBAS_POS.md  ROADMAP.md  SINCRONIZACION_INTEGRACION_POS_CPE.md  campos_txt.md
src/: __init__.py  motor.py  scheduler.py
src/adapters/: __init__.py  adapter_factory.py  base_adapter.py  dbf_farmacia_adapter.py  generic_adapter.py  xlsx_adapter.py
src/config/: client_loader.py
src/database/: __init__.py  cpe_logger.py  schema.py
src/generators/: __init__.py  anulacion_generator.py  json_generator.py  txt_generator.py
src/licenses/: __init__.py  validator.py
src/licenses/keys/: disateq_public.pem
src/logger/: cpe_logger.py
src/sender/: __init__.py  universal_sender.py
src/tools/: contract_validator.py  smart_mapper.py  source_explorer.py  wizard_mapper.py  wizard_service.py
src/ui/: __init__.py  api.py  app.py
src/ui/backend/: __init__.py  app.py
src/ui/frontend/: index.html  wizard.html
src/ui/frontend/css/: components.css  dashboard.css  layout.css  main.css  variables.css
src/ui/frontend/js/: app.js  dashboard.js  processor.js  utils.js  wizard.js
tests/: __init__.py
tools/: __init__.py
tools/field_mappers/: __init__.py
tools/scanners/: __init__.py
tools/wizards/: __init__.py
